--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -1,24 +1,24 @@
 // --------------------------------------------------------------
 // -                       Custom Scripts                       -
 // --------------------------------------------------------------
-//      All the custom scripts, remove the '//' to enable...     
+//      All the custom scripts, remove the '//' to enable...
 //      Place your scripts here!
 
 //npc: npc/location/to/script.txt
 
 // ----------------------- Basic Scripts -----------------------
-//npc: npc/custom/warper.txt
-//npc: npc/custom/jobmaster.txt
-//npc: npc/custom/platinum_skills.txt
-//npc: npc/custom/healer.txt
+npc: npc/custom/warper.txt
+npc: npc/custom/jobmaster.txt
+npc: npc/custom/platinum_skills.txt
+npc: npc/custom/healer.txt
 //npc: npc/custom/breeder.txt
 //npc: npc/custom/card_seller.txt
 //npc: npc/custom/itemmall.txt
-//npc: npc/custom/stylist.txt
-//npc: npc/custom/resetnpc.txt
+npc: npc/custom/stylist.txt
+npc: npc/custom/resetnpc.txt
 //npc: npc/custom/card_remover.txt
 //npc: npc/custom/item_signer.txt
-//npc: npc/custom/woe_controller.txt
+npc: npc/custom/woe_controller.txt
 
 // ----------------------- Other Scripts -----------------------
 // -- Private MVP & Branch Room
@@ -44,7 +44,7 @@
 //npc: npc/custom/etc/monster_arena.txt
 // -- Raceway mini-game
 //npc: npc/custom/etc/morroc_raceway.txt
-// -- Random change of Drop/Exp rates 1x ~ 1.5x every 6 hours on your server 
+// -- Random change of Drop/Exp rates 1x ~ 1.5x every 6 hours on your server
 //npc: npc/custom/etc/floating_rates.txt
 // -- Wedding script that supports same-sex marriages
 //npc: npc/custom/etc/marriage.txt
